--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ name: Deploy to Hugging Face Spaces
 on:
   push:
     branches:
+      - '03-a-web-1.0-application'
       - '05-htmx-patterns'
 
 jobs:
@@ -20,4 +21,4 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git push --force https://HuggingFaceBot:$HF_TOKEN@huggingface.co/spaces/vinay-jose/$GITHUB_REF_NAME $GITHUB_REF_NAME:main
+          git push https://HuggingFaceBot:$HF_TOKEN@huggingface.co/spaces/vinay-jose/$GITHUB_REF_NAME $GITHUB_REF_NAME:main
